--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "angularfe46": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angularfe46"
+    }
+  },
+  "defaultProject": "angularfe46",
+  "cli": {
+    "analytics": "8f6cbcda-b4fb-498d-9000-6dc520358376"
+  }
 }
